--- a/gpt/finetune.ipynb
+++ b/gpt/finetune.ipynb
@@ -46,12 +46,12 @@
     "total_steps = (\n",
     "    config.FinetuningConfig.n_epoch\n",
     "    * len(train_dataloader)\n",
-    "    // config.FinetuningConfig.update_freq\n",
+    "    // config.FinetuningConfig.accumulate_grad_batches\n",
     ")\n",
     "warmup_steps = int(\n",
     "    config.FinetuningConfig.warmup_steps\n",
     "    * total_steps\n",
-    "    // config.FinetuningConfig.update_freq\n",
+    "    // config.FinetuningConfig.accumulate_grad_batches\n",
     ")\n",
     "\n",
     "total_steps, warmup_steps"
@@ -243,7 +243,7 @@
     "        loss = lm_loss + clf_loss * config.FinetuningConfig.clf_loss_weight\n",
     "        loss.backward()\n",
     "\n",
-    "        if (step + 1) % config.FinetuningConfig.update_freq == 0 or (step + 1) == len(\n",
+    "        if (step + 1) % config.FinetuningConfig.accumulate_grad_batches == 0 or (step + 1) == len(\n",
     "            train_dataloader\n",
     "        ):\n",
     "            nn.utils.clip_grad_norm_(model.parameters(), config.clip)\n",
