--- a/gpt/pretrain.ipynb
+++ b/gpt/pretrain.ipynb
@@ -58,14 +58,14 @@
     "tokenizer, dataloader = load_data(\"bookcorpus\", loading_ratio=loading_ratio, num_proc=5)\n",
     "\n",
     "total_steps = (\n",
-    "    len(dataloader) * config.PretrainConfig.n_epoch // config.PretrainConfig.update_freq\n",
+    "    len(dataloader) * config.PretrainConfig.n_epoch // config.PretrainConfig.accumulate_grad_batches\n",
     ")\n",
     "\n",
     "# scale warmup steps\n",
     "warmup_steps = int(\n",
     "    config.PretrainConfig.warmup_steps\n",
     "    * loading_ratio\n",
-    "    // config.PretrainConfig.update_freq\n",
+    "    // config.PretrainConfig.accumulate_grad_batches\n",
     ")\n",
     "\n",
     "total_steps, warmup_steps"
@@ -177,7 +177,7 @@
     "\n",
     "where $ \\theta $ represents the model parameters. \n",
     "\n",
-    "Considering the GPU memory constraints, gradient accumulation is needed to ensure sufficient tokens in each batch, updating gradients every `update_freq` rounds."
+    "Considering the GPU memory constraints, gradient accumulation is needed to ensure sufficient tokens in each batch, updating gradients every `accumulate_grad_batches` rounds."
    ]
   },
   {
@@ -212,7 +212,7 @@
     "        loss = criterion(outputs, tgt.contiguous().view(-1))\n",
     "        loss.backward()\n",
     "\n",
-    "        if (step + 1) % config.PretrainConfig.update_freq == 0 or (step + 1) == len(\n",
+    "        if (step + 1) % config.PretrainConfig.accumulate_grad_batches == 0 or (step + 1) == len(\n",
     "            dataloader\n",
     "        ):\n",
     "            nn.utils.clip_grad_norm_(model.parameters(), config.clip)\n",
