--- a/gpt2/pretrain.ipynb
+++ b/gpt2/pretrain.ipynb
@@ -38,7 +38,7 @@
     "    \"openwebtext\", loading_ratio=loading_ratio, num_proc=5\n",
     ")\n",
     "\n",
-    "total_steps = len(dataloader) * config.n_epoch // config.update_freq\n",
+    "total_steps = len(dataloader) * config.n_epoch // config.accumulate_grad_batches\n",
     "# these constants are chosen arbitrarily.\n",
     "lr_decay_steps = int(total_steps * 0.999)\n",
     "warmup_steps = 200\n",
@@ -172,7 +172,7 @@
     "\n",
     "where $ \\theta $ represents the model parameters. \n",
     "\n",
-    "Considering the GPU memory constraints, gradient accumulation is needed to ensure sufficient tokens in each batch, updating gradients every `update_freq` rounds."
+    "Considering the GPU memory constraints, gradient accumulation is needed to ensure sufficient tokens in each batch, updating gradients every `accumulate_grad_batches` rounds."
    ]
   },
   {
@@ -207,7 +207,7 @@
     "        loss = criterion(outputs, tgt.contiguous().view(-1))\n",
     "        loss.backward()\n",
     "\n",
-    "        if (step + 1) % config.update_freq == 0 or (step + 1) == len(\n",
+    "        if (step + 1) % config.accumulate_grad_batches == 0 or (step + 1) == len(\n",
     "            dataloader\n",
     "        ):\n",
     "            nn.utils.clip_grad_norm_(model.parameters(), config.clip)\n",
