--- a/transformer/train.ipynb
+++ b/transformer/train.ipynb
@@ -191,7 +191,7 @@
     "2. `tgt`: The target language tokens that should be fed into decoder.\n",
     "3. `gt`: The ground truth that we expect model to predict.\n",
     "\n",
-    "Considering the GPU memory constraints, gradient accumulation is needed to ensure sufficient tokens in each batch, updating gradients every `update_freq` rounds."
+    "Considering the GPU memory constraints, gradient accumulation is needed to ensure sufficient tokens in each batch, updating gradients every `accumulate_grad_batches` rounds."
    ]
   },
   {
@@ -233,7 +233,7 @@
     "                dec_output.contiguous().view(-1, tgt_tokenizer.get_vocab_size()),\n",
     "                gt.contiguous().view(-1),\n",
     "            )\n",
-    "            / config.update_freq\n",
+    "            / config.accumulate_grad_batches\n",
     "        )\n",
     "        total_loss += loss.item()\n",
     "\n",
@@ -276,10 +276,10 @@
     "\n",
     "        # [batch_size * (seq_len - 1), tgt_vocab_size]\n",
     "        outputs = outputs.contiguous().view(-1, tgt_tokenizer.get_vocab_size())\n",
-    "        loss = criterion(outputs, gt.contiguous().view(-1)) / config.update_freq\n",
+    "        loss = criterion(outputs, gt.contiguous().view(-1)) / config.accumulate_grad_batches\n",
     "        loss.backward()\n",
     "\n",
-    "        if (step + 1) % config.update_freq == 0 or (step + 1) == len(train_dataloader):\n",
+    "        if (step + 1) % config.accumulate_grad_batches == 0 or (step + 1) == len(train_dataloader):\n",
     "            nn.utils.clip_grad_norm_(model.parameters(), config.clip)\n",
     "            optimizer.step()\n",
     "            scheduler.step()\n",
