--- a/bert/inference.ipynb
+++ b/bert/inference.ipynb
@@ -9,10 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load tokenizer\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "import torch\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"google-bert/bert-base-uncased\")\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"load tokenizer\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -23,10 +38,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of trainable parameters: 108.50M\n",
+      "load done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from modules.bert import BERTTextClassifier\n",
+    "import config \n",
+    "\n",
+    "bert_clf = BERTTextClassifier.from_pretrained(\n",
+    "    config.pretrained_path,  # 配置文件中的预训练模型目录\n",
+    "    num_frozen_layers=12,  # 冻结层\n",
+    ")\n",
+    "bert_clf.load_state_dict(torch.load(config.checkpoint_dir / \"bert_clf_10.pth\")[\"model\"])\n",
+    "print(\"load done!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,18 +71,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Here I consider text classification task with simple example as below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text_clf_logits:tensor([[-0.8150, -0.0207]])\n",
+      "Predicted class index: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"I am extremely disappointed with the quality of this item.\"\n",
+    "\n",
+    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0)\n",
+    "\n",
+    "predicted_class = bert_clf.text_clf(input_ids)\n",
+    "\n",
+    "print(f\"Predicted class index: {predicted_class.item()}\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
