--- a/bert/inference.ipynb
+++ b/bert/inference.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Import Modules and Data"
+    "## 1. Import Modules and Data\n",
+    "load tokenizer from huggingface"
    ]
   },
   {
@@ -38,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of trainable parameters: 108.50M\n",
+      "Number of trainable parameters: 108.89M\n",
       "load done!\n"
      ]
     }
@@ -59,7 +60,9 @@
     "    config.pretrained_path,  # 配置文件中的预训练模型目录\n",
     "    num_frozen_layers=12,  # 冻结层\n",
     ")\n",
-    "bert_clf.load_state_dict(torch.load(config.checkpoint_dir / \"bert_clf_10.pth\")[\"model\"])\n",
+    "\n",
+    "bert_clf.load_state_dict(torch.load(config.checkpoint_dir / \"bert_clf_3.pth\")[\"model\"])\n",
+    "bert_clf.to(device)\n",
     "print(\"load done!\")"
    ]
   },
@@ -67,34 +70,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Inference\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 3. Inference\n",
     "Here I consider text classification task with simple example as below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text_clf_logits:tensor([[-0.8150, -0.0207]])\n",
+      "Predicted class index: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"I was beaten by you!\"\n",
+    "\n",
+    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
+    "\n",
+    "predicted_class = bert_clf.text_clf(input_ids)\n",
+    "\n",
+    "print(f\"Predicted class index: {predicted_class.item()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Predicted class index: 1\n"
      ]
     }
    ],
    "source": [
-    "text = \"I am extremely disappointed with the quality of this item.\"\n",
+    "text = \"I love the LLM world!\"\n",
     "\n",
-    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0)\n",
+    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
     "\n",
     "predicted_class = bert_clf.text_clf(input_ids)\n",
     "\n",
