--- a/bert/inference.ipynb
+++ b/bert/inference.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,8 +57,8 @@
     "import config \n",
     "\n",
     "bert_clf = BERTTextClassifier.from_pretrained(\n",
-    "    config.pretrained_path,  # 配置文件中的预训练模型目录\n",
-    "    num_frozen_layers=12,  # 冻结层\n",
+    "    config.pretrained_path, \n",
+    "    num_frozen_layers=12,\n",
     ")\n",
     "\n",
     "bert_clf.load_state_dict(torch.load(config.checkpoint_dir / \"bert_clf_3.pth\")[\"model\"])\n",
@@ -71,12 +71,12 @@
    "metadata": {},
    "source": [
     "## 3. Inference\n",
-    "Here I consider text classification task with simple example as below."
+    "Here I consider text classification task with simple example as below, where '0' represents negative and '1' represents positive."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,6 +112,29 @@
    ],
    "source": [
     "text = \"I love the LLM world!\"\n",
+    "\n",
+    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
+    "\n",
+    "predicted_class = bert_clf.text_clf(input_ids)\n",
+    "\n",
+    "print(f\"Predicted class index: {predicted_class.item()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class index: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Successful test!\"\n",
     "\n",
     "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
     "\n",
