refactor bert model

--- a/gpt2/inference.ipynb
+++ b/gpt2/inference.ipynb
@@ -32,62 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading weights from pretrained gpt: gpt2\n",
-      "forcing vocab_size=50257, max_len=1024\n",
-      "number of parameters: 123.65M\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "GPT2(\n",
-       "  (transformer): ModuleDict(\n",
-       "    (wte): Embedding(50257, 768)\n",
-       "    (wpe): Embedding(1024, 768)\n",
-       "    (drop): Dropout(p=0.1, inplace=False)\n",
-       "    (h): ModuleList(\n",
-       "      (0-11): 12 x Block(\n",
-       "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (attn): Attention(\n",
-       "          (c_attn): Linear(in_features=768, out_features=2304, bias=True)\n",
-       "          (c_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
-       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (mlp): ModuleDict(\n",
-       "          (c_fc): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (act): GELU(approximate='tanh')\n",
-       "          (c_proj): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "  )\n",
-       "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
-       ")"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
     "import config\n",
     "from modules import GPT2\n",
     "\n",
-    "device = torch.device(\"cuda:0\")\n",
+    "device = torch.device(\"cuda\")\n",
     "\n",
     "model = GPT2.from_pretrained(str(config.pretrained_dir)).to(device)\n",
     "model.eval()"
