--- a/transformer/inference.ipynb
+++ b/transformer/inference.ipynb
@@ -13,7 +13,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -31,7 +31,6 @@
                 "from data import load_data, PAD_TOKEN\n",
                 "import torch\n",
                 "import config\n",
-                "import os\n",
                 "\n",
                 "src_lang = \"en\"\n",
                 "tgt_lang = \"de\"\n",
@@ -74,11 +73,11 @@
                 "    tgt_pad_idx=tgt_tokenizer.token_to_id(PAD_TOKEN),\n",
                 "    src_vocab_size=src_tokenizer.get_vocab_size(),\n",
                 "    tgt_vocab_size=tgt_tokenizer.get_vocab_size(),\n",
-                "    d_model=config.d_model,\n",
-                "    n_head=config.n_head,\n",
+                "    hidden_size=config.hidden_size,\n",
+                "    num_attention_heads=config.num_attention_heads,\n",
                 "    max_len=config.max_len,\n",
                 "    ffn_hidden=config.ffn_hidden,\n",
-                "    n_layer=config.n_layer,\n",
+                "    num_hidden_layers=config.num_hidden_layers,\n",
                 "    dropout=config.dropout,\n",
                 "    device=device,\n",
                 ")\n",
