--- a/gpt/finetune.ipynb
+++ b/gpt/finetune.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
     "from modules import GPTClassifier\n",
     "import config\n",
     "\n",
-    "device = torch.device(\"cuda:1\")\n",
+    "device = torch.device(\"cuda\")\n",
     "n_classes = 2  # sst2 is a binary classification task\n",
     "model = GPTClassifier.from_pretrained(\n",
     "    config.pretrained_dir,\n",
