--- a/bert/inference.ipynb
+++ b/bert/inference.ipynb
@@ -5,33 +5,26 @@
    "metadata": {},
    "source": [
     "## 1. Import Modules and Data\n",
-    "load tokenizer from huggingface"
+    "Load tokenizer from huggingface."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "If you want to use `BertLMHeadModel` as a standalone, add `is_decoder=True.`\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-22T15:49:12.622840Z",
+     "start_time": "2025-02-22T15:49:02.504481Z"
     }
-   ],
+   },
    "source": [
-    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "from transformers import AutoTokenizer\n",
+    "import torch\n",
+    "import config \n",
+    "tokenizer = AutoTokenizer.from_pretrained(config.pretrained_path)\n",
     "\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"/data/share/model_weight/bert/bert-base-uncased\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"/data/share/model_weight/bert/bert-base-uncased\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"load tokenizer\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -41,37 +34,7 @@
      ]
     }
    ],
-   "source": [
-    "from transformers import AutoTokenizer\n",
-    "import torch\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"/data/share/model_weight/bert/bert-base-uncased\")\n",
-    "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(\"load tokenizer\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'BertModel' object has no attribute 'config'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodules\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BertModel\n\u001b[0;32m----> 2\u001b[0m \u001b[43mBertModel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pretrained\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/data/share/model_weight/bert/bert-base-uncased\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/icl/lib/python3.11/site-packages/torch/nn/modules/module.py:1729\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1727\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[1;32m   1728\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1729\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'BertModel' object has no attribute 'config'"
-     ]
-    }
-   ],
-   "source": [
-    "from modules import BertModel\n",
-    "BertModel.from_pretrained(\"/data/share/model_weight/bert/bert-base-uncased\").config"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -82,18 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of trainable parameters: 108.89M\n",
-      "load done!\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-22T15:32:52.966694Z",
+     "start_time": "2025-02-22T15:32:26.841318Z"
     }
-   ],
+   },
    "source": [
     "import torch\n",
     "from modules.bert import BERTTextClassifier\n",
@@ -101,13 +58,24 @@
     "\n",
     "bert_clf = BERTTextClassifier.from_pretrained(\n",
     "    config.pretrained_path, \n",
-    "    num_frozenum_hidden_layerss=12,\n",
+    "    num_frozen_layers=12,\n",
     ")\n",
     "\n",
     "bert_clf.load_state_dict(torch.load(config.checkpoint_dir / \"bert_clf_3.pth\")[\"model\"])\n",
     "bert_clf.to(device)\n",
     "print(\"load done!\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of trainable parameters: 24.43M\n",
+      "load done!\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -119,8 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-22T15:33:27.770856Z",
+     "start_time": "2025-02-22T15:33:27.043893Z"
+    }
+   },
+   "source": [
+    "text = \"I was beaten by you!\"\n",
+    "\n",
+    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
+    "\n",
+    "predicted_class = bert_clf.text_clf(input_ids)\n",
+    "\n",
+    "print(f\"Predicted class index: {predicted_class.item()}\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -130,29 +111,16 @@
      ]
     }
    ],
-   "source": [
-    "text = \"I was beaten by you!\"\n",
-    "\n",
-    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
-    "\n",
-    "predicted_class = bert_clf.text_clf(input_ids)\n",
-    "\n",
-    "print(f\"Predicted class index: {predicted_class.item()}\")"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted class index: 1\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-22T15:33:28.882570Z",
+     "start_time": "2025-02-22T15:33:28.866308Z"
     }
-   ],
+   },
    "source": [
     "text = \"I love the LLM world!\"\n",
     "\n",
@@ -161,12 +129,7 @@
     "predicted_class = bert_clf.text_clf(input_ids)\n",
     "\n",
     "print(f\"Predicted class index: {predicted_class.item()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -176,6 +139,16 @@
      ]
     }
    ],
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-22T15:33:31.235345Z",
+     "start_time": "2025-02-22T15:33:31.206977Z"
+    }
+   },
    "source": [
     "text = \"Successful test!\"\n",
     "\n",
@@ -184,7 +157,45 @@
     "predicted_class = bert_clf.text_clf(input_ids)\n",
     "\n",
     "print(f\"Predicted class index: {predicted_class.item()}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class index: 1\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-22T15:33:50.702231Z",
+     "start_time": "2025-02-22T15:33:50.653355Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "text = \"HA HA HA!\"\n",
+    "\n",
+    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
+    "\n",
+    "predicted_class = bert_clf.text_clf(input_ids)\n",
+    "\n",
+    "print(f\"Predicted class index: {predicted_class.item()}\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class index: 1\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   }
  ],
  "metadata": {
