--- a/bert/inference.ipynb
+++ b/bert/inference.ipynb
@@ -4,104 +4,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Import Modules and Data\n",
-    "Load tokenizer from huggingface."
+    "## 1. Import Modules and Data"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-22T15:49:12.622840Z",
      "start_time": "2025-02-22T15:49:02.504481Z"
     }
    },
+   "outputs": [],
    "source": [
-    "from transformers import AutoTokenizer\n",
-    "import torch\n",
-    "import config \n",
-    "tokenizer = AutoTokenizer.from_pretrained(config.pretrained_path)\n",
+    "from data import load_data\n",
     "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(\"load tokenizer\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "load tokenizer\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+    "tokenizer, *_ = load_data(\"sst2\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Load Trained Model"
+    "## 2. Load Trained Model\n",
+    "\n",
+    "Load our fine-tuned checkpoint."
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-22T15:32:52.966694Z",
      "start_time": "2025-02-22T15:32:26.841318Z"
     }
    },
+   "outputs": [],
    "source": [
     "import torch\n",
-    "from modules.bert import BERTTextClassifier\n",
-    "import config \n",
     "\n",
-    "bert_clf = BERTTextClassifier.from_pretrained(\n",
-    "    config.pretrained_path, \n",
-    "    num_frozen_layers=12,\n",
+    "import config\n",
+    "from modules.bert import BertForSequenceClassification\n",
+    "\n",
+    "device = torch.device(\"cuda\")\n",
+    "bert_clf = BertForSequenceClassification.from_pretrained(config.pretrained_path)\n",
+    "\n",
+    "bert_clf.load_state_dict(\n",
+    "    torch.load(config.checkpoint_dir / \"bert_clf_3.pth\")[\"model\"]\n",
     ")\n",
-    "\n",
-    "bert_clf.load_state_dict(torch.load(config.checkpoint_dir / \"bert_clf_3.pth\")[\"model\"])\n",
-    "bert_clf.to(device)\n",
-    "print(\"load done!\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of trainable parameters: 24.43M\n",
-      "load done!\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+    "bert_clf = bert_clf.to(device).eval()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 3. Inference\n",
-    "Here I consider text classification task with simple example as below, where '0' represents negative and '1' represents positive."
+    "Here we consider text classification task with simple example as below, where '0' represents negative and '1' represents positive."
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-22T15:33:27.770856Z",
      "start_time": "2025-02-22T15:33:27.043893Z"
     }
    },
-   "source": [
-    "text = \"I was beaten by you!\"\n",
-    "\n",
-    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
-    "\n",
-    "predicted_class = bert_clf.text_clf(input_ids)\n",
-    "\n",
-    "print(f\"Predicted class index: {predicted_class.item()}\")"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -111,91 +83,55 @@
      ]
     }
    ],
-   "execution_count": 3
+   "source": [
+    "@torch.no_grad()\n",
+    "def text_classification(text):\n",
+    "    if isinstance(text, str):\n",
+    "        text = [text]\n",
+    "    inputs = tokenizer(\n",
+    "        text,\n",
+    "        padding=\"longest\",\n",
+    "        truncation=True,\n",
+    "        max_length=config.max_len,\n",
+    "        return_tensors=\"pt\",\n",
+    "    ).to(device)\n",
+    "\n",
+    "    logits = bert_clf(\n",
+    "        input_ids=inputs.input_ids, attention_mask=inputs.attention_mask.bool()\n",
+    "    )\n",
+    "    predicted_class = torch.argmax(logits, dim=1)\n",
+    "    predicted_class = predicted_class.cpu().numpy()\n",
+    "    return predicted_class\n",
+    "\n",
+    "\n",
+    "text = \"I was beaten by you!\"\n",
+    "predicted_class = text_classification(text)\n",
+    "print(f\"Predicted class index: {predicted_class.item()}\")"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-22T15:33:28.882570Z",
      "start_time": "2025-02-22T15:33:28.866308Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class index: 1\n"
+     ]
+    }
+   ],
    "source": [
     "text = \"I love the LLM world!\"\n",
-    "\n",
-    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
-    "\n",
-    "predicted_class = bert_clf.text_clf(input_ids)\n",
-    "\n",
+    "predicted_class = text_classification(text)\n",
     "print(f\"Predicted class index: {predicted_class.item()}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted class index: 1\n"
-     ]
-    }
-   ],
-   "execution_count": 4
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-22T15:33:31.235345Z",
-     "start_time": "2025-02-22T15:33:31.206977Z"
-    }
-   },
-   "source": [
-    "text = \"Successful test!\"\n",
-    "\n",
-    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
-    "\n",
-    "predicted_class = bert_clf.text_clf(input_ids)\n",
-    "\n",
-    "print(f\"Predicted class index: {predicted_class.item()}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted class index: 1\n"
-     ]
-    }
-   ],
-   "execution_count": 5
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-22T15:33:50.702231Z",
-     "start_time": "2025-02-22T15:33:50.653355Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "text = \"HA HA HA!\"\n",
-    "\n",
-    "input_ids = torch.tensor(tokenizer.encode(text)).unsqueeze(0).to(device)\n",
-    "\n",
-    "predicted_class = bert_clf.text_clf(input_ids)\n",
-    "\n",
-    "print(f\"Predicted class index: {predicted_class.item()}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted class index: 1\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   ]
   }
  ],
  "metadata": {
