--- a/transformer/train.ipynb
+++ b/transformer/train.ipynb
@@ -343,7 +343,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "ml",
+            "display_name": "base",
             "language": "python",
             "name": "python3"
         },
